--- a/style.css
+++ b/style.css
@@ -31,4 +31,11 @@ input[type="text"] {
 }
 
 .box {
-  
+  background-color: blue;
+  height: 50px;
+  width: 50px;
+}
+
+.box:hover {
+  background-color: red;
+}
